app/assets/stylesheets/hours_selector.css
/* ... */
.infopage{
  max-width:620px;
  background-color: #fff;
  margin:20px auto 20px auto;
   /*border: 1px solid #333;*/
   padding-bottom: 100px;



}
.ui-page-theme-a{
  background: #fff /*{a-page-background-color}*/;
border-color: #bbb /*{a-page-border}*/;
color: #333 /*{a-page-color}*/;
text-shadow: none;



}

#buttonsLine {
  max-width: 620px;
  margin: 0px;
}

#totalPatientsBlock {
  margin: auto;
  margin-top: 0;
  float: none;
  width: 9em;
  padding-left: 2.1em;
}

#totalPatientsLabel {
  margin-bottom: 0;
  margin-top: 1.75em;
  margin-right: 0.75em;
  font-family: GibsonLight;
}



.blockFloatNot {
  position:relative;
  display:block;
  float:left;
  clear:left;
  left:0px;
  top:0px;
}
.blockFloatRight {
  position:relative;
  display:block;
  float:right;
  clear:none;
  left:0px;
  top:0px;
}
.blockFloat {
  position:relative;
  display:block;
  float:left;
  clear:none;
  left:0px;
  top:0px;
}
.lineitem{

  width:100%;
  min-height: 58px;
  border-top: 1px solid #D8D6D6;
  font-family: 'GibsonLight', Verdana, sans-serif;
    line-height:32px;
    font-size:16px;

}
.lineitem_end{

  width:100%;
  height: 58px;

  font-family: 'GibsonLight', Verdana, sans-serif;
    line-height:32px;
    font-size:16px;

}
.linelabel{
   margin-top:10px;
   color: #010101;
}

.mystery_label{ /*errored on heroku assets:precompile*/
   margin-top: 17px;
   color: #010101;
   /*line-height: 14px;*/
}
.linelabelpred3{
   margin-top: 13px;
   color: #010101;
   /*line-height: 14px;*/
}
.linelabelpred3{
   /*margin-top: 17px;*/
   color: #010101;
   /*line-height: 14px;*/
}
.linelabelpred{
   margin-top: 17px;
   color: #010101;
    /*line-height: 14px;*/
    text-align: right;
}
.linepred{
  height: 30px;
  width: 182px;
  font-family: 'GibsonRegular', Verdana, sans-serif;
  color: #fff;
  font-size: 12px;
  padding-top: 3px;

  margin: 0 auto;
  margin-top: 10px;

  text-align: center;
  text-shadow: rgba(0, 0, 0, 0.247059) 0px -1px 0px;

}
.linenumber{
  height: 30px;
  width: 50px;
  font-family: 'GibsonSemiBold', Verdana, sans-serif;
  color: #fff;
  margin-top: 10px;
  text-align: center;
  text-shadow: rgba(0, 0, 0, 0.247059) 0px -1px 0px;

}
.saveline{

  margin-top: 50px;

}
.totallabel{
margin-top: 40px;

}

.totalnumber{
  font-family: 'GibsonSemiBold', Verdana, sans-serif;
  font-size:46px;
  margin: 0px;
}

.lineinput input{
  width:100%;
  font-family: 'GibsonLight', Verdana, sans-serif;

    font-size:16px;

}
.lineinput_wc input{
  width:450px;
  font-family: 'GibsonLight', Verdana, sans-serif;
  margin-top: 10px;
    font-size:16px;
    height: 30px;
    padding-left: 7px;

}
.gradient_light {

background: linear-gradient(rgb(168, 223, 243), rgb(113, 211, 237));
border-radius: 5px;
box-shadow: rgba(0, 0, 0, 0.2) 0px 1px 3px;
}
.homewin2 {
cursor: pointer;
width: 90px;
background: linear-gradient(rgb(203, 203, 203), rgb(175, 175, 175));
border-top-left-radius: 5px;
border-bottom-left-radius: 5px;
border-right: 1px solid #fff;
}
.homewin {
cursor: pointer;
width: 60px;
background: linear-gradient(rgb(203, 203, 203), rgb(175, 175, 175));
border-top-left-radius: 5px;
border-bottom-left-radius: 5px;
}
.draw {
cursor: pointer;
width: 60px;
background: linear-gradient(rgb(203, 203, 203), rgb(175, 175, 175));
border-left: 1px solid #fff;
border-right: 1px solid #fff;
}
.awaywin {
  cursor: pointer;
width: 60px;
background: linear-gradient(rgb(203, 203, 203), rgb(175, 175, 175));
border-top-right-radius: 5px;
border-bottom-right-radius: 5px;
}
.awaywin2 {
  cursor: pointer;
width: 90px;
background: linear-gradient(rgb(203, 203, 203), rgb(175, 175, 175));
border-top-right-radius: 5px;
border-bottom-right-radius: 5px;
}
.homewin2:hover,.homewin:hover, .draw:hover, .awaywin:hover,.awaywin2:hover{
  background: linear-gradient(rgb(0, 192, 244), rgb(0, 150, 210));
}
.predactive{
  background: linear-gradient(rgb(0, 192, 244), rgb(0, 150, 210));
}
.wrongpredactive{
  background: linear-gradient(rgb(250, 20, 72), rgb(208, 0, 50));
}
.rightpredactive{
  background: linear-gradient(rgb(0, 213, 179), rgb(0, 173, 89));
}
.prevpredactive{
  background: linear-gradient(rgb(129, 220, 250), rgb(118, 200, 231));

}
.gradient_blue {


background: linear-gradient(rgb(0, 194, 247), rgb(0, 149, 208));
border-radius: 5px;
box-shadow: rgba(0, 0, 0, 0.2) 0px 1px 3px;
}

.featureText{

  width:100%;

  font-family: 'GibsonLight', Verdana, sans-serif;
    line-height:32px;
    font-size:18px;
    color:#666666;

}

.scorelabel{
  font-family: 'GibsonLight', Verdana, sans-serif;
    line-height:32px;
    font-size:18px;
    color:#666666;
  margin-top: 40px;
  text-align: center
}
.scorevalue, .scorevalue2, .scorevalue3{
font-size: 46px;
line-height: 43px;
font-family: 'GibsonRegular', Verdana, sans-serif;

  text-align: right
}
.expando_wc{
  cursor: pointer;
  height: 50px;

}
.roundlabel_wc{
  margin-top: 25px;
  margin-bottom: 10px;
  font-family: 'GibsonRegular', Verdana, sans-serif;
width:100%;

}
.tag_wc{
font-family: 'GibsonLight', Verdana, sans-serif;
width:100%;
font-size: 18px;
line-height: 30px;
text-align: left;


}
.illustration_wc{
  /*border: 1px solid #ccc;*/
  width: 190px;
  height: 361px;
}
.illustration_wc2{
  /*border: 1px solid #ccc;*/
  width: 190px;
  height: 361px;
  margin-left: 10px;
}
.rules_wc{
font-family: 'GibsonLight', Verdana, sans-serif;
width:100%;
font-size: 24px;
line-height: 30px;
text-align: left;
margin-top: 50px;

}
.rules_wc ol, ul {
list-style: decimal;
margin-left: 30px;
font-size: 18px;
}
.rules_wc li {
margin-top: 5px;

}
.done_wc{
  font-family: 'GibsonRegular', Verdana, sans-serif;
  width:100%;
  font-size: 24px;
  margin-top: -10px;
}
.link_wc{
  font-family: 'GibsonRegular', Verdana, sans-serif;
  width:100%;
  font-size: 24px;
  margin-top: 10px;
  color: #008143;
}
.link_wc a{

  color: #00b05c;
}
.create_wc{
 margin-top: 40px;
 border: 1px solid #ccc;
 background-color: #f2f2f2;
 width: 560px;
 /*height: 260px;*/
 padding: 20px;

}
/* ... */

